crates/sifr_python_parser/tests/snapshots/invalid_syntax@raise_stmt_unparenthesized_tuple_cause.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/raise_stmt_unparenthesized_tuple_cause.py
---
## AST

```
Module(
    ModModule {
        range: 0..34,
        body: [
            Raise(
                StmtRaise {
                    range: 0..15,
                    exc: Some(
                        Name(
                            ExprName {
                                range: 6..7,
                                id: "x",
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: Some(
                        Tuple(
                            ExprTuple {
                                range: 13..15,
                                elts: [
                                    Name(
                                        ExprName {
                                            range: 13..14,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                },
            ),
            Raise(
                StmtRaise {
                    range: 16..33,
                    exc: Some(
                        Name(
                            ExprName {
                                range: 22..23,
                                id: "x",
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: Some(
                        Tuple(
                            ExprTuple {
                                range: 29..33,
                                elts: [
                                    Name(
                                        ExprName {
                                            range: 29..30,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            range: 32..33,
                                            id: "z",
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | raise x from y,
  |              ^^ Syntax Error: Unparenthesized tuple expression cannot be used here
2 | raise x from y, z
  |


  |
1 | raise x from y,
2 | raise x from y, z
  |              ^^^^ Syntax Error: Unparenthesized tuple expression cannot be used here
  |
