crates/sifr_python_parser/tests/snapshots/invalid_syntax@re_lex_logical_token_mac_eol.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/re_lex_logical_token_mac_eol.py
---
## AST

```
Module(
    ModModule {
        range: 0..46,
        body: [
            If(
                StmtIf {
                    range: 0..46,
                    test: Call(
                        ExprCall {
                            range: 3..19,
                            func: Name(
                                ExprName {
                                    range: 3..7,
                                    id: "call",
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 7..19,
                                args: [
                                    Name(
                                        ExprName {
                                            range: 8..11,
                                            id: "foo",
                                            ctx: Load,
                                        },
                                    ),
                                    List(
                                        ExprList {
                                            range: 13..18,
                                            elts: [
                                                Name(
                                                    ExprName {
                                                        range: 14..15,
                                                        id: "a",
                                                        ctx: Load,
                                                    },
                                                ),
                                                Name(
                                                    ExprName {
                                                        range: 17..18,
                                                        id: "b",
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                    body: [
                        FunctionDef(
                            StmtFunctionDef {
                                range: 23..46,
                                is_async: false,
                                decorator_list: [],
                                name: Identifier {
                                    id: "bar",
                                    range: 27..30,
                                },
                                type_params: None,
                                parameters: Parameters {
                                    range: 30..32,
                                    posonlyargs: [],
                                    args: [],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                                returns: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            range: 42..46,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | if call(foo, [a, b    def bar():        pass
  |                    Syntax Error: Expected ']', found NonLogicalNewline
  |
